--- a/login.html
+++ b/login.html
@@ -24,18 +24,6 @@
       </nav>
     </header>
 
-    <!-- <nav class="sidenav">
-      <ul>
-        <li><a href="#"><img src="./img/icones/cervo.svg" alt="cervo"></a></li>
-        <li><a href="#"><img src="./img/icones/leao.svg" alt="leao.svg"></a></li>
-        <li><a href="#"><img src="./img/icones/gato.svg" alt="gato.svg"></a></li>
-        <li><a href="#"><img src="./img/icones/vaca.svg" alt="vaca.svg"></a></li>
-        <li><a href="#"><img src="./img/icones/ovelha.svg" alt="ovelha.svg"></a></li>
-        <li><a href="#"><img src="./img/icones/abelha.svg" alt="abelha.svg"></a></li>
-      </ul>
-    </nav> -->
-
-    
     <main class="content">
       <div class="titulo">
         <h1>Login</h1>
@@ -46,36 +34,14 @@
 
 
       <p class="col-wide">
-        <!-- É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico. -->
         <form>
-          <input type="text" name="" id="" style="width: 100%; margin-bottom: 60px;" placeholder="Nome">
-          <input type="password" name="" id="" style="width: 100%; margin-bottom: 60px" placeholder="Senha">
-          <button style="width: 100%; margin-bottom: 60px">Acessar</button>
+          <input type="text" name="" id="" style="width: 80%; margin-bottom: 20px;" placeholder="Nome">
+          <input type="password" name="" id="" style="width: 80%; margin-bottom: 15px" placeholder="Senha">
+          <button style="width: 80%; margin: 60px 0 0px 0">Acessar</button>
         </form>
       </p>
 
-     
-      <!-- <div class="informacoes">
-        <p>
-          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
-        </p>
-        <p>
-          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
-        </p>
-      </div>
-      <img class="col-wide" src="./img/wolf3.jpg" alt="Wolf 3"> -->
-
     </main>
-
-    <!-- <aside class="anuncios">
-      <div class="anuncio-item">
-        <img src="./img/anuncio-1.jpg" alt="anuncio 1">
-      </div>
-
-      <div class="anuncio-item">
-        <img src="./img/anuncio-2.jpg" alt="anuncio 2">
-      </div>
-    </aside> -->
 
     <footer class="footer">
       <p>Welton © 2024. Direitos reservados.</p>
