--- a/login.html
+++ b/login.html
@@ -35,9 +35,9 @@
 
       <p class="col-wide">
         <form>
-          <input type="text" name="" id="" style="width: 80%; margin-bottom: 20px;" placeholder="Nome">
-          <input type="password" name="" id="" style="width: 80%; margin-bottom: 15px" placeholder="Senha">
-          <button style="width: 80%; margin: 60px 0 0px 0">Acessar</button>
+          <input type="email" name="" id="email" style="width: 80%; margin-bottom: 20px;" placeholder="email">
+          <input type="password" name="" id="passwd" style="width: 80%; margin-bottom: 15px" placeholder="senha">
+          <button id="btnEntrar" style="width: 80%; margin: 60px 0 0px 0">Acessar</button>
         </form>
       </p>
 
@@ -47,5 +47,7 @@
       <p>Welton © 2024. Direitos reservados.</p>
     </footer>
   </div>
+
+  <script src="app.js" defer></script>
 </body>
 </html>
