--- a/login.html
+++ b/login.html
@@ -35,9 +35,9 @@
 
       <p class="col-wide">
         <form>
-          <input type="email" name="" id="email" style="width: 80%; margin-bottom: 20px;" placeholder="email">
-          <input type="password" name="" id="passwd" style="width: 80%; margin-bottom: 15px" placeholder="senha">
-          <button id="btnEntrar" style="width: 80%; margin: 60px 0 0px 0">Acessar</button>
+          <input type="email" name="" id="email" placeholder="email">
+          <input type="password" name="" id="passwd" placeholder="senha">
+          <button id="btnEntrar">Acessar</button>
         </form>
       </p>
 
