--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
 
       <p class="col-wide">
         <form>
-          <input type="email" name="" id="email" placeholder="email">
+          <input type="email" name="" id="email" placeholder="email" autocomplete="off">
           <input type="password" name="" id="passwd" placeholder="senha">
           <button id="btnEntrar">Acessar</button>
         </form>
