--- a/cadastro.html
+++ b/cadastro.html
@@ -8,33 +8,36 @@
   <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="login.css">
-  <title>Login</title>
+  <title>Cadastro</title>
 </head>
 <body>
   <div class="estrutura">
 
     <header class="header">
-      <a href="#" class="logo">
+      <a href="./index.html" class="logo">
         <img src="./img/wildbeast.svg" alt="logo">
       </a>
       <nav>
         <ul>
-          <li><a href="./cadastro.html">Cadastrar</a></li>
+          <li><a href="./login.html">Login</a></li>
         </ul>
       </nav>
     </header>
 
     <main class="content">
       <div class="titulo">
-        <h1>Login</h1>
+        <h1>Crie sua conta</h1>
         <span>Bem vindo!</span>
       </div>
 
-        <form>
-          <input type="email" name="" id="email" placeholder="email" autocomplete="off">
-          <input type="password" name="" id="passwd" placeholder="senha">
-          <button id="btnEntrar">Acessar</button>
+        <form class="formulario">
+          <input type="text" id="name" placeholder="nome">
+          <input type="email" id="email" placeholder="email" autocomplete="off">
+          <input type="password" id="passwd" placeholder="senha">
+          <input type="password" id="checkPasswd" placeholder="confirmar senha">
+          <button id="btnCadastrar">Cadastrar</button>
         </form>
+
 
     </main>
 
