--- a/cadastro.html
+++ b/cadastro.html
@@ -31,10 +31,10 @@
       </div>
 
         <form class="formulario">
-          <input type="text" id="name" placeholder="nome">
+          <input type="text" id="name" placeholder="nome" autocomplete="off">
           <input type="email" id="email" placeholder="email" autocomplete="off">
-          <input type="password" id="passwd" placeholder="senha">
-          <input type="password" id="checkPasswd" placeholder="confirmar senha">
+          <input type="password" id="passwd" placeholder="senha" autocomplete="off">
+          <input type="password" id="checkPasswd" placeholder="confirmar senha" autocomplete="off">
           <button id="btnCadastrar">Cadastrar</button>
         </form>
 
